--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <!-- <div class="main-bottom">
+        <div class="main-bottom">
             <div class="main-left">
                 <h1>Your doctor <br>is here</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, temporibus sapiente cum illo porro voluptatibus eaque cupiditate ea nam provident, ut commodi sunt. Iusto tenetur quam fuga, corporis consequatur doloremque!</p>
@@ -55,7 +55,7 @@
             <div class="main-right">
                 <iframe width="500" height="300" src="https://www.youtube.com/embed/cA1Ck3jwKVg" title="Enjoyment tour of International Trade Fair 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-        </div> -->
+        </div>
 
         
 
